--- a/app/views/students/signup.html.haml
+++ b/app/views/students/signup.html.haml
@@ -4,12 +4,12 @@
     %table{:border => "0"}
       %tr
         %td
-          = label :session, :name, 'Enter LastName'
+          = label :session, :lastname, 'Enter LastName'
         %td
           = text_field(:session, :lastname, class: 'input-field', :pattern => "([A-Za-z]+)", :oninvalid => "this.setCustomValidity('Please enter Your LastName')", :oninput => "this.setCustomValidity('')", :required => true)
       %tr
         %td
-          = label :session, :name, 'Enter FirstName'
+          = label :session, :firstname, 'Enter FirstName'
         %td
           = text_field(:session, :firstname, class: 'input-field', :pattern => "([A-Za-z]+)", :oninvalid => "this.setCustomValidity('Please enter Your FirstName')", :oninput => "this.setCustomValidity('')", :required => true)
             
