--- a/app/views/admins/add_new_admin.html.haml
+++ b/app/views/admins/add_new_admin.html.haml
@@ -23,7 +23,7 @@
           = password_field :admin_request, 'password', class: 'input-field', :required => true
       
       
-    = submit_tag 'Comfirm', :id => 'request_button_left'
+    = submit_tag 'Confirm', :id => 'request_button_left'
     
   = form_tag(student_requests_adminprivileges_path, method: :get) do
     = submit_tag 'Cancel', :id => 'request_button_right'
