--- a/app/views/student_requests/add_new_force_request.html.haml
+++ b/app/views/student_requests/add_new_force_request.html.haml
@@ -36,7 +36,7 @@
           = label :student_request, :notes, 'Notes '
         %td  
           = text_area :student_request, 'notes', class: 'notes'
-    = submit_tag 'Comfirm', :id => 'request_button_left'
+    = submit_tag 'Confirm', :id => 'request_button_left'
     
   = form_tag(student_requests_adminprivileges_path, method: :get) do
     = submit_tag 'Cancel', :id => 'request_button_right'
