--- a/app/views/student_requests/getStudentInformationByUin.html.haml
+++ b/app/views/student_requests/getStudentInformationByUin.html.haml
@@ -1,38 +1,49 @@
 
-%h2 Student Details
+%h2 Student information
+%table#student_requests1.sortable
+  %thead
+  - @student_by_uin.each do |record|
+    %tr
+      %th UIN
+      %td= record.uin 
+    %tr
+      %th Full Name
+      %td= record.name
+    %tr  
+      %th Major
+      %td= record.major
+    %tr  
+      %th Class
+      %td= record.classification
+    %tr  
+      %th Minor
+      %td= record.minor
+    %tr
+      %th Expec. Graduation
+      %td= record.expected_graduation 
+    %tr  
+      %th Request Semester
+      %td= record.request_semester
+    - break
+    
+    
+%h2 Student's force request
 %table#student_requests.sortable
   %thead
     %tr
-      %th UIN
-      %th Full Name
-      %th Email
-      %th Phone
-      %th Major
-      %th Classification
-      %th Minor
       %th Course ID
       %th Section ID
-      %th Expec. Graduation
-      %th Request Semester
       %th State
       %th Student Notes
       %th Admin Notes
-      
+      %th Creation Date
      
   %tbody
     - @student_by_uin.each do |record|
       %tr
-        %td= record.uin 
-        %td= record.name
-        %td= record.email
-        %td= record.phone
-        %td= record.major
-        %td= record.classification
-        %td= record.minor
         %td= record.course_id
         %td= record.section_id
-        %td= record.expected_graduation
-        %td= record.request_semester
         %td= record.state
         %td= record.notes
         %td= record.notes_to_student
+        %td= record.creation_date.strftime("%Y-%m-%d %H:%M:%S")
