--- a/app/views/students/show.html.haml
+++ b/app/views/students/show.html.haml
@@ -4,7 +4,7 @@
 
 - if @student_requests[0].nil?
   %h2= "Howdy! #{session_get(:name)}(#{session_get(:uin)})"
-  %h2= "You have not created any requests till now!" 
+  %h2= "You have not created any requests yet" 
 - else
   %h2= "Howdy! Welcome back #{@student_requests[0].name} "
 
