--- a/app/views/student_requests/adminview.html.haml
+++ b/app/views/student_requests/adminview.html.haml
@@ -40,6 +40,7 @@
               // %th Priority
               %th Creation date
               %th Email
+              %th Actions
         
           %tbody
             - @coursestudentlist[course].each do |record|
@@ -56,11 +57,13 @@
                 %td= record.section_id
                 %td= record.expected_graduation
                 // %td= record.request_semester
-                %td= select_tag("state_sel", options_for_select(@allViewAdminStates))
+                %td= record.state
                 // %td= record.priority
                 %td= record.creation_date.strftime("%Y-%m-%d %H:%M:%S")
                 %td= mail_to record.email, "email", subject: "Force Request System: Regarding course #{record.course_id}" 
-              
+                %td=   (link_to 'Approve', {:action => "approve", :controller => "student_requests",:id => record.request_id}, :method => :put) + "<br>".html_safe+ (link_to 'Hold', {:action => "hold", :controller => "student_requests",:id => record.request_id}, :method => :put) + "<br>".html_safe+ (link_to 'Reject', {:action => "reject", :controller => "student_requests",:id => record.request_id}, :method => :put) 
+                
+                
             %table{ :class => "multiUpdate" }
               %tr
                 %td= select_tag("multi_state_sel", options_for_select(@allAdminStates))
